# calculator-backend

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  deploy.yml  main.yml  package.yml  pipeline.yml  pr.yml
conf/: settings.py  urls.py
core/: api.py  serializers.py  test_api.py  urls.py
